Just follow our RSS feed, dog.

--- a/about.html
+++ b/about.html
@@ -31,6 +31,8 @@
                     <a href="https://ochame.neocities.org/" target="_blank"><img src="/images/link-buttons/ochame.gif" alt="Ochame" title="Nona"></a>
                     <a href="https://dokode.moe" target="_blank"><img src="/images/link-buttons/dokodemo.gif" alt="DokoDemo" title="Suni"></a>
                     <a href="https://feelingmachine.moe/" target="_blank"><img src="/images/link-buttons/feelingmachine.gif" alt="Feeeling Machine" title="Nephro"></a>
+                    <a href="https://aiston.neocities.org/" target="_blank"><img src="/images/link-buttons/aiston.gif" alt="Aiston" title="Ashton"></a>
+                    <a href="https://moonview.neocities.org/" target="_blank"><img src="/images/link-buttons/moonview.gif" alt="Moonview" title="Noa"></a>
                 </center>
             </section>
             <figure>
@@ -44,7 +46,7 @@
                 <h3>TV & movie delights</h3>
                 <p>Cartoons: <em>Hazbin Hotel</em>, Helluva Boss, Turning Red</p>
                 <p>Anime: <em>Satoshi Kon works</em>, Studio Ghibli works, Mob Psycho 100, Akira, <em>Tekkonkinkreet</em></p>
-                <p>Live-action: Oldboy... I don't watch many live-action movies</p>
+                <p>Live-action: Oldboy... we don't watch many live-action movies</p>
             </section>
             <section class="box">
                 <h3>Video game delights</h3>
