--- a/illus3.html
+++ b/illus3.html
@@ -32,6 +32,12 @@
         <!--
         <a href="/images/art/illus3/"><img src="/images/art/illus3/"></a>
         -->
+        <a href="/images/art/illus3/2023-moomin-noa.png"><img src="/images/art/illus3/moomin-noa.png"></a>
+        <!---->
+        <a href="/images/art/illus3/2023-snufkin-suni.png"><img src="/images/art/illus3/snufkin-suni.png"></a>
+        <!---->
+        <a href="/images/art/illus3/2023-sniff-sugar.png"><img src="/images/art/illus3/2023-sniff-sugar.png"></a>
+        <!---->
         <a href="/images/art/illus3/2023-urchin.png"><img src="/images/art/illus3/2023-urchin.png"></a>
         <!---->
         <a href="/images/art/illus3/2023-afonso.png"><img src="/images/art/illus3/2023-afonso.png"></a>
