--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
             <!--Updates-->
             <h3 class="center rainbow">Update log</h3>
             <footer id="updates">
+                <p>19/06/2023: 3 new pieces of art in <a href="/illus3.html">Illustration 3</a>, and a <a href="/dreamie.html">lenghty retrospective of a strange Neocities user</a>. Also, RSS?! We hope it works.</p>
                 <p>17/06/2023: Another layout change. Mother of God.</p>
             </footer>
+            <a href="/rss.xml"><img src="/images/link-buttons/rss.gif" class="center" alt="RSS feed"></a>
             <p class="center"><a href="https://blorbo.social/@yourdevilfriends" target="_blank" rel="me">Mastodon</a> · <a href="https://heckmaster.tumblr.com/" target="_blank">Tumblr</a></p>
         </article>
         <aside>
