--- a/noodles.html
+++ b/noodles.html
@@ -70,7 +70,7 @@
                 <p>The packet had instructions, obviously, but one of the suggestions was just straight-up deranged... it was to «munch it», which in their words means to «open pack and seasonings, mix well and eat from the pack»...? We have no idea who in their right mind would eat uncooked noodles, seasoned or not. What a strange suggestion.</p>
                 <!---->
                 <h3 id="banzai">Banzai Noodle Chicken Flavor by Cigala: 2.5/5</h3>
-                <p>Eh. A bit too salty, honestly, but otherwise okay. Not good, but <em>okay</em>. What's up with the <a href="https://images2.imgbox.com/cc/c6/fkE39POl_o.jpg" target="_blank">racist caricature in the packaging</a> though...?</p>
+                <p>Eh. A bit too salty, honestly, but otherwise okay. Not good, but <em>okay</em>. What's up with the <a href="/images/article-images/racism-noodle.jpg" target="_blank">racist caricature in the packaging</a> though...?</p>
                 <!---->
                 <h3 id="nissin-demae">Demae Ramen Miso by Nissin: 3/5</h3>
                 <p>We typically really like Nissin noodles, but this one wasn't really it... Too salty for us. However, there was a slightly spicy aftertaste that we enjoyed.</p>
