--- a/credits.html
+++ b/credits.html
@@ -26,7 +26,7 @@
             <p>Official Cat Partners: Maruru And Hachi art (<a href="/images/backgrounds/nekos.jpg">1</a>)</p>
             <p>Official Yoshi's Island art (<a href="/images/backgrounds/foliage.png">1</a>)</p>
             <p>Official Animal Crossing art (<a href="/images/decor/newslady.gif">1</a>)</p>
-            <p><a href="https://user.xmission.com/~emailbox/catstuff.htm" target="_blank">Cat Stuff Graphics</a> (<a href="/images/backgrounds/kits.gif">1</a>) (<a href="/images/decor/cate.gif">2</a>)</p>
+            <p><a href="https://user.xmission.com/~emailbox/catstuff.htm" target="_blank">Cat Stuff Graphics</a> (<a href="/images/backgrounds/kits.gif">1</a>) (<a href="/images/decor/cate.gif">2</a>) (<a href="/images/headers/tails.gif">3</a>)</p>
             <p><a href="http://www.travelmin.com/" target="_blank">travelmin</a> (<a href="/images/decor/neko.gif">1</a>)</p>
             <p><a href="https://hpgpixer.jp/" target="_blank">PixelGaro</a> (<a href="/images/decor/webmaster.gif">1</a>)</p>
             <p><a href="http://diabellalovescats.com/graphics.htm" target="_blank">Diabella's Vintage Cat Graphics</a> (<a href="/images/headers/magical.gif">1</a>) (<a href="/images/headers/soul.jpg">2</a>)</p>
