--- a/writing.html
+++ b/writing.html
@@ -20,11 +20,14 @@
             <a href="/credits.html">Site credits</a>
         </nav>
         <article>
+            <h2><a href="/dreamie.html">That one Neocities user</a></h2>
+            <p>A retrospective on the bizarre dreamie drama (AKA the great Neocities war of 2022).</p>
+            <!---->
             <h2><a href="/accessibility.html">Tips and tricks for Web accessibility</a></h2>
             <p>Advice on how to make a site more accessible. Recommended for Webmasters who already have a decent grasp of HTML and CSS.</p>
             <!---->
             <h2><a href="/noodles.html">Reviews of instant noodles</a></h2>
-            <p>«My favorite page in yourdevilfriends.art is the one where devils overanalyze instant noodles!« Said no one ever.</p>
+            <p>«My favorite page in yourdevilfriends.art is the one where devils overanalyze instant noodles!» Said no one ever.</p>
         </article>
     </main>
 </body>
