--- a/dreamie.html
+++ b/dreamie.html
@@ -80,6 +80,19 @@
                     <video src="/etc/neocities-simulator.mp4" controls></video>
                     <figcaption>Thank you <a href="https://feelingmachine.moe/" target="_blank">Neph</a> for the cinematic masterpiece</figcaption>
                 </figure>
+                <p>They also threw a tantrum over an alterhuman webring, calling its owner (who is psychotic) sanist for no good reason. No, we are not kidding:</p>
+                <figure class="center">
+                    <img src="/images/article-images/alterhuman-1.png" alt="Neocities status post by dreamie reading:
+                    will be renewing my efforts on the alterbeing webring in a bit ^_^">
+                    <figcaption>Before the webring was created.</figcaption>
+                </figure>
+                <figure class="center">
+                    <img src="/images/article-images/alterhuman-2.png" alt="Neocities status post by dreamie reading:
+                    no i don't give a shit about the webring from one of the most sanist freaks i've ever met online. just fucking funny. especially when it was only made to piss me off anyways as supposedly that person hates the current alterhuman community. but wants to run a webring for it??? lol.">
+                    <img src="/images/article-images/alterhuman-3.png" alt="eocities status post by dreamie reading:
+                    very funny to say you include psychotic beings in your webring then specifically exclude psychotic beings from your webring">
+                    <figcaption>After the webring was created.</figcaption>
+                </figure>
                 <!--Proof-->
                 <h2 id="proof">How we know they lied</h2>
                 <p>Their most egregious lies were about their race, so we'll mainly focus on that.</p>
