--- a/illus3.html
+++ b/illus3.html
@@ -25,7 +25,7 @@
             <a href="/credits.html">Site credits</a>
         </nav>
         <section>
-            <p><a href="/illus4.html"><~</a> · <a href="/illus2.html">~></a><br>
+            <p><a href="/illus4.html"><~</a> · <a href="/illus2.html">~></a></p>
         </section>
     </aside>
     <main>
@@ -166,6 +166,6 @@
         <!---->
         <a href="/images/art/illus3/2023-dice.jpg"><img src="/images/art/illus3/2023-dice.jpg"></a>
     </main>
-    <img src="/images/decor/handsyouthis.png" style="transform: rotate(-25deg); bottom: -30px; right: -30px; position: fixed;">
+    <img src="/images/decor/handsyouthis.png" style="transform: rotate(-25deg); bottom: -30px; right: -30px; pointer-events: none; position: fixed;">
 </body>
 </html>
