--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <!--Updates-->
             <h3 class="center rainbow">Update log</h3>
             <footer id="updates">
+                <p>20/06/2023: Check this shit out: The <a href="/illus1.html">Illustration 1</a> gallery has been created. Go check it out, will ya!</p>
                 <p>19/06/2023: 3 new pieces of art in <a href="/illus3.html">Illustration 3</a>, and a <a href="/dreamie.html">lenghty retrospective of a strange Neocities user</a>. Also, RSS?! We hope it works.</p>
                 <p>17/06/2023: Another layout change. Mother of God.</p>
             </footer>
