Sigular typo fix

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <article>
             <section>
                 <p>Greetings, welcome. You've arrived at the <strong class="rainbow">devils' den</strong>, which by most accounts is not as hellish as it sounds.</p>
-                <p>You can click on the header image at any point to return to the index page.</p>
+                <p>You can click the header image at any point to return to the index page.</p>
                 <p><strong>Mature content warning!</strong> This site contains some violent or suggestive content in the art pages.</p>
                 <h3>What is this?</h3>
                 <p>This site is merely a place to dump creative works and whatever crosses our mind.</p>
