--- a/archive1.html
+++ b/archive1.html
@@ -182,5 +182,98 @@
         <a href="/images/art/archive1/2012-tea-party.png"><img src="/images/art/archive1/2012-tea-party.png"></a>
         <!---->
         <a href="/images/art/archive1/2012-lunch.png"><img src="/images/art/archive1/2012-lunch.png"></a>
+        <!---->
+        <h2>2011</h2>
+        <a href="/images/art/archive1/2011-ac.png"><img src="/images/art/archive1/2011-ac.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-bunt.png"><img src="/images/art/archive1/2011-bunt.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-fire.png"><img src="/images/art/archive1/2011-fire.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-furret.png"><img src="/images/art/archive1/2011-furret.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-static.gif"><img src="/images/art/archive1/2011-static.gif"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-spider.png"><img src="/images/art/archive1/2011-spider.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-spike.png"><img src="/images/art/archive1/2011-spike.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-octop.png"><img src="/images/art/archive1/2011-octop.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-cuttlefish.png"><img src="/images/art/archive1/2011-cuttlefish.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-dipper.png"><img src="/images/art/archive1/2011-dipper.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-llama.png"><img src="/images/art/archive1/2011-llama.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-tekk.png"><img src="/images/art/archive1/2011-tekk.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-green.png"><img src="/images/art/archive1/2011-green.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-troll.png"><img src="/images/art/archive1/2011-troll.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-shark.png"><img src="/images/art/archive1/2011-shark.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-cuttle.png"><img src="/images/art/archive1/2011-cuttle.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-ninetales.png"><img src="/images/art/archive1/2011-ninetales.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-brvr.png"><img src="/images/art/archive1/2011-brvr.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-canines.png"><img src="/images/art/archive1/2011-canines.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-stupid.png"><img src="/images/art/archive1/2011-stupid.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-orca.gif"><img src="/images/art/archive1/2011-orca.gif"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-lineart.jpg"><img src="/images/art/archive1/2011-lineart.jpg"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-kitty.png"><img src="/images/art/archive1/2011-kitty.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-sonichu.png"><img src="/images/art/archive1/2011-sonichu.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-speedo.png"><img src="/images/art/archive1/2011-speedo.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-rainbow.png"><img src="/images/art/archive1/2011-rainbow.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-hurr.png"><img src="/images/art/archive1/2011-hurr.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-dog.png"><img src="/images/art/archive1/2011-dog.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-blue.png"><img src="/images/art/archive1/2011-blue.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-blargh.png"><img src="/images/art/archive1/2011-blargh.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-bad-fashion.png"><img src="/images/art/archive1/2011-bad-fashion.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-hehe.png"><img src="/images/art/archive1/2011-hehe.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-lucario.jpg"><img src="/images/art/archive1/2011-lucario.jpg"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-rawr.png"><img src="/images/art/archive1/2011-rawr.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-renard.png"><img src="/images/art/archive1/2011-renard.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-mspain.png"><img src="/images/art/archive1/2011-mspain.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-bat-thing.png"><img src="/images/art/archive1/2011-bat-thing.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-bro.png"><img src="/images/art/archive1/2011-bro.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-dewott.gif"><img src="/images/art/archive1/2011-dewott.gif"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-wartortle.jpg"><img src="/images/art/archive1/2011-wartortle.jpg"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-char.png"><img src="/images/art/archive1/2011-char.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-bad-egg.png"><img src="/images/art/archive1/2011-bad-egg.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-couple.jpg"><img src="/images/art/archive1/2011-couple.jpg"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-piplup.png"><img src="/images/art/archive1/2011-piplup.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-budew.png"><img src="/images/art/archive1/2011-budew.png"></a>
+        <!---->
+        <a href="/images/art/archive1/2011-tekkers.png"><img src="/images/art/archive1/2011-tekkers.png"></a>
     </main>
 </body>
