Fear and Hunger is a game

--- a/illus2.html
+++ b/illus2.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/css/universal.css">
     <link rel="stylesheet" href="/css/gallery.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <title>Illustration 3</title>
+    <title>Illustration 2</title>
     <style>
         body {
             background-image: url(/images/backgrounds/katamari.jpg);
@@ -33,6 +33,8 @@
         <a href="/images/art/illus2/"><img src="/images/art/illus2/"></a>
         -->
         <h2>2023</h2>
+        <a href="/images/art/illus2/2023-urine.png"><img src="/images/art/illus2/2023-urine.png"></a>
+        <!---->
         <a href="/images/art/illus2/2023-penny.png"><img src="/images/art/illus2/2023-penny.png"></a>
         <!---->
         <a href="/images/art/illus2/2023-moomin-noa.png"><img src="/images/art/illus2/2023-moomin-noa.png"></a>
