--- a/writing.html
+++ b/writing.html
@@ -20,6 +20,8 @@
             <a href="/credits.html">Site credits</a>
         </nav>
         <article>
+            <h2><a href="/fearandhunger.html">Fear and Hunger log</a></h2>
+            <p>Documenting our misadventures in the <em>Fear and Hunger</em> series. Each entry records a different playthrough.</p>
             <h2><a href="/dreamie.html">That one Neocities user</a></h2>
             <p>A retrospective on the bizarre dreamie drama (AKA the great Neocities war of 2022).</p>
             <!---->
