--- a/accessibility.html
+++ b/accessibility.html
@@ -26,7 +26,9 @@
 </head>
 <body>
     <main>
-        <header><img src="/images/headers/catputer.gif" alt="Header image"></header>
+        <header>
+            <a href="/"><img src="/images/headers/catputer.gif" alt="Header image"></a>
+        </header>
         <nav>
             <a href="/about.html">About</a>
             <a href="/art.html">Art</a>
