--- a/credits.html
+++ b/credits.html
@@ -22,18 +22,11 @@
         <article>
             <h1>Site credits</h1>
             <h2>Graphics</h2>
-            <p>Official Nekojiru art (<a href="/images/headers/nekojiru.png">1</a>)</p>
-            <p>Official Cat Partners: Maruru And Hachi art (<a href="/images/backgrounds/nekos.jpg">1</a>)</p>
-            <p>Official Yoshi's Island art (<a href="/images/backgrounds/foliage.png">1</a>)</p>
-            <p>Official Animal Crossing art (<a href="/images/decor/newslady.gif">1</a>)</p>
             <p><a href="https://user.xmission.com/~emailbox/catstuff.htm" target="_blank">Cat Stuff Graphics</a> (<a href="/images/backgrounds/kits.gif">1</a>) (<a href="/images/decor/cate.gif">2</a>) (<a href="/images/headers/tails.gif">3</a>)</p>
             <p><a href="http://www.travelmin.com/" target="_blank">travelmin</a> (<a href="/images/decor/neko.gif">1</a>)</p>
             <p><a href="https://hpgpixer.jp/" target="_blank">PixelGaro</a> (<a href="/images/decor/webmaster.gif">1</a>) (<a href="/images/link-buttons/rss.gif">2</a>)</p>
             <p><a href="http://diabellalovescats.com/graphics.htm" target="_blank">Diabella's Vintage Cat Graphics</a> (<a href="/images/headers/magical.gif">1</a>) (<a href="/images/headers/soul.jpg">2</a>)</p>
-            <p>Official Mob Psycho 100 art (<a href="/images/headers/despair.jpg">1</a>)</p>
-            <p>Official Katamari Damacy art (<a href="/images/backgrounds/katamari.jpg">1</a>)</p>
-            <p>Official Scott Pilgrim art (<a href="/images/headers/economy.jpg">1</a>)</p>
-            <p>Official Pokémon art (<a href="/images/headers/garbo.png">1</a>) (<a href="/images/decor/chu.png">2</a>)</p>
+            <p>Every other asset is official art, made/edited by us, or from an unknown source.</p>
             <h2>Code snippets</h2>
             <p><a href="https://solaria.neocities.org/" target="_blank">Solaria's Webspace</a> (rainbow text code)</p>
             <p><a href="https://obby.dog/" target="_blank">Vertpush</a> (falling images code)</p>
