--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
             <!--Updates-->
             <h3 class="center rainbow">Update log</h3>
             <footer id="updates">
+                <p>24/06/2023: Fuck you, two updates in a day. Read our <a href="/fearandhunger.html">Fear and Hunger log</a>... now!! Oh, there's also new art on <a href="/illus2.html">Illustration 2</a>.</p>
                 <p>24/06/2023: We've been cooking up the <a href="/archive1.html">Archive 1</a> for the past few days, and it's finally done! Feel free to give it a look. Content warning: Homestuck.</p>
                 <p>20/06/2023: Check this shit out: The <a href="/illus1.html">Illustration 1</a> gallery has been created. Go check it out, will ya!</p>
-                <p>19/06/2023: 3 new pieces of art in <a href="/illus3.html">Illustration 3</a>, and a <a href="/dreamie.html">lenghty retrospective of a strange Neocities user</a>. Also, RSS?! We hope it works.</p>
+                <p>19/06/2023: 3 new pieces of art in <s>Illustration 3</s> <a href="/illus2.html">Illustration 2</a>, and a <a href="/dreamie.html">lenghty retrospective of a strange Neocities user</a>. Also, RSS?! We hope it works.</p>
                 <p>17/06/2023: Another layout change. Mother of God.</p>
             </footer>
             <a href="/rss.xml"><img src="/images/link-buttons/rss.gif" class="center" alt="RSS feed"></a>
