--- a/fearandhunger.html
+++ b/fearandhunger.html
@@ -43,9 +43,38 @@
                 <p>We decided to detail our adventures here.</p>
                 <!--Fear and Hunger 2: Termina-->
                 <h2><em>Fear and Hunger 2: Termina</em> log</h2>
+                <!--
+                <h3>Run #</h3>
+                <ul>
+                    <li>Date:</li>
+                    <li>Played as:</li>
+                    <li>Difficulty:</li>
+                    <li>Additional thoughts:</li>
+                </ul>
+                <p></p>
+                -->
                 <p>None yet.</p>
                 <!--Fear and Hunger-->
                 <h2><em>Fear and Hunger</em> log</h2>
+                <!--
+                <h3>Run #</h3>
+                <ul>
+                    <li>Date:</li>
+                    <li>Played as:</li>
+                    <li>Difficulty:</li>
+                    <li>Additional thoughts:</li>
+                </ul>
+                <p></p>
+                -->
+                <h3>Run #2</h3>
+                <ul>
+                    <li>Date: 24/06/2023</li>
+                    <li>Played as: Dark Priest</li>
+                    <li>Difficulty: Terror and Starvation</li>
+                    <li>Additional thoughts: If a sketchy-looking merchant is selling you a potion that seems too good to be true, it's probably poison</li>
+                </ul>
+                <p>Started off fine, quickly making our way through the basement. Successfully used Necromancy on a skeleton. In the prisons, Cahara joined the party, fought against a ghoul and unsuccessfully attempted Necromancy on it. In the blood pit, Cahara left the party and stole a blue vial from our inventory, and we made way into the inner hall. Exiting the blood pit, we ended up hiding from Trotur avoiding conflict and running away from battles, eventually going through the courtyard and into the entrance. There we found the Book of Fears and the girl, though we lacked the ability to free her from the cage she was in. Ended up at the starting point again, bought a potion from the merchant and headed back into the entrance, being chased by hounds. Won against the first group of hounds, but lost to the second.</p>
+                <!---->
                 <h3>Run #1</h3>
                 <ul>
                     <li>Date: 24/06/2023</li>
