--- a/accessibility.html
+++ b/accessibility.html
@@ -35,6 +35,7 @@
             <a href="/writing.html">Writing</a>
             <a href="/misc.html">Misc.</a>
             <a href="/credits.html">Site credits</a>
+            <a href="https://yourdevilfriends.123guestbook.com/">Guestbook</a>
         </nav>
         <article>
             <h1>Tips and tricks for Web accessibility</h1>
