--- a/dreamie.html
+++ b/dreamie.html
@@ -26,7 +26,7 @@
                 <p>In this post, we'd like to bring you back to the summer of 2022, specifically within the Neocities community, and go over the most bizarre drama we've seen on that site. It involves people who we're friends or acquainted with, ourselves for the briefest time, a bunch of kids for no fucking good reason, and a strange user going by <em>dreamie</em>.</p>
                 <p>Now, dreamie frequently hopped from pronoun set to pronoun set- which is not bad in itself- as a way to switch goal posts and deflect criticisms by accusing other of misgendering them. As such, we have no fucking clue which pronouns they use... so, we're sticking with «they/them» since that's usually a safe bet.</p>
                 <p>Besides that, the proof of a lot of these things has not been properly archived or happened in deleted Discord servers, so while you may take these accusations with a pinch of salt, please do keep in mind that what we say here would be said by most who used Neocities at the time. All we're saying is... where there's smoke, there's fire.</p>
-                <p>As a final introductory note, we're white. If we're incorrect about an aspect of a certain culture, feel free to let us know so we can fix that.</p>
+                <p>As a final introductory note, if you notice we're incorrect about something, feel free to let us know so we can fix that.</p>
                 <p><strong>Content warning:</strong> extremely online stupidity</p>
                 <h3>Table of contents</h3>
                 <ol>
