--- a/fearandhunger.html
+++ b/fearandhunger.html
@@ -32,6 +32,7 @@
             <a href="/writing.html">Writing</a>
             <a href="/misc.html">Misc.</a>
             <a href="/credits.html">Site credits</a>
+            <a href="https://yourdevilfriends.123guestbook.com/">Guestbook</a>
         </nav>
         <article>
             <h1>Fear and Hunger log</h1>
@@ -53,7 +54,14 @@
                 </ul>
                 <p></p>
                 -->
-                <p>None yet.</p>
+                <h3>Run #1</h3>
+                <ul>
+                    <li>Date: 25/06/2023</li>
+                    <li>Played as: Doctor</li>
+                    <li>Difficulty: Fear and Hunger mode</li>
+                    <li>Additional thoughts: Maybe don't sleep in the same house where a deranged priest does their rituals</li>
+                </ul>
+                <p>After playing through the introduction, headed north towards the old town of Prehevil. Fought multiple enemies there, managing to win every battle but getting an infection in the last one. Entered the mayor's manor, and after exploring a bit rested on the bed. While resting, we were attacked by the decrepit priest, losing the battle to his coin toss grab. Lost the run by dying from the infection we couldn't heal.</p>
                 <!--Fear and Hunger-->
                 <h2><em>Fear and Hunger</em> log</h2>
                 <!--
@@ -66,6 +74,15 @@
                 </ul>
                 <p></p>
                 -->
+                <h3>Run #3</h3>
+                <ul>
+                    <li>Date: 25/06/2023</li>
+                    <li>Played as: Outlander</li>
+                    <li>Difficulty: Terror and Starvation</li>
+                    <li>Additional thoughts: Wasting a bear trap on an easy enemy is a terrible idea</li>
+                </ul>
+                <p>The layout of the dungeon was the same as the last run, so we proceeded much in the same way. In the prison, fought and won against a ghoul, using a soul stone on it. Used a bear trap on Trotur in the basement, making the fight against him much easier, getting a key after searching his corpse. However, we lost both arm against a guard. We managed to escape, but decided to quit the run early afterwards.</p>
+                <!---->
                 <h3>Run #2</h3>
                 <ul>
                     <li>Date: 24/06/2023</li>
