--- a/illus1.html
+++ b/illus1.html
@@ -34,9 +34,10 @@
             <a href="/writing.html">Writing</a>
             <a href="/misc.html">Misc.</a>
             <a href="/credits.html">Site credits</a>
+            <a href="https://yourdevilfriends.123guestbook.com/">Guestbook</a>
         </nav>
         <section>
-            <p><a href="/illus1.html"><~</a><br>
+            <p><a href="/illus2.html"><~</a><br>
         </section>
     </aside>
     <main>
@@ -85,7 +86,7 @@
         <a href="/images/art/illus1/2022-pranic.png"><img src="/images/art/illus1/2022-pranic.png"></a>
         <!---->
         <a href="/images/art/illus1/2022-mist.png"><img src="/images/art/illus1/2022-mist.png"></a>
-        <p>Collaboration with Patrick <3</p>
+        <p>Collaboration with <a href="https://mortalsins.neocities.org/" target="_blank">Patrick</a> <3</p>
         <!---->
         <a href="/images/art/illus1/2022-monster.png"><img src="/images/art/illus1/2022-monster.png"></a>
         <!---->
