--- a/illus2.html
+++ b/illus2.html
@@ -23,9 +23,10 @@
             <a href="/writing.html">Writing</a>
             <a href="/misc.html">Misc.</a>
             <a href="/credits.html">Site credits</a>
+            <a href="https://yourdevilfriends.123guestbook.com/">Guestbook</a>
         </nav>
         <section>
-            <p><a href="/illus2.html"><~</a> · <a href="/illus1.html">~></a></p>
+            <p><a href="/illus3.html"><~</a> · <a href="/illus1.html">~></a></p>
         </section>
     </aside>
     <main>
