--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
             <a href="/writing.html">Writing</a>
             <a href="/misc.html">Misc.</a>
             <a href="/credits.html">Site credits</a>
+            <a href="https://yourdevilfriends.123guestbook.com/">Guestbook</a>
         </nav>
         <img src="/images/decor/cate.gif" class="rotate" style="margin-left: 10px; position: absolute;">
         <article id="about">
