--- a/archive1.html
+++ b/archive1.html
@@ -23,6 +23,7 @@
             <a href="/writing.html">Writing</a>
             <a href="/misc.html">Misc.</a>
             <a href="/credits.html">Site credits</a>
+            <a href="https://yourdevilfriends.123guestbook.com/">Guestbook</a>
         </nav>
         <section>
             <p><a href="/archive2.html"><~</a></p>
