--- a/credits.html
+++ b/credits.html
@@ -18,6 +18,7 @@
             <a href="/writing.html">Writing</a>
             <a href="/misc.html">Misc.</a>
             <a href="/credits.html">Site credits</a>
+            <a href="https://yourdevilfriends.123guestbook.com/">Guestbook</a>
         </nav>
         <article>
             <h1>Site credits</h1>
