--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <a href="/writing.html">Writing</a>
             <a href="/misc.html">Misc.</a>
             <a href="/credits.html">Site credits</a>
+            <a href="https://yourdevilfriends.123guestbook.com/">Guestbook</a>
         </nav>
         <article>
             <section>
@@ -50,6 +51,7 @@
             <!--Updates-->
             <h3 class="center rainbow">Update log</h3>
             <footer id="updates">
+                <p>25/06/2023: Minor changes and fixes all around the site, new <a href="/fearandhunger.html">F&H logs</a>, added the <a href="/misc.html">miscellaneous</a> and <a href="/freebies.html">free graphics</a> pages... We have a <a href="https://yourdevilfriends.123guestbook.com/">guestbook</a> now too!</p>
                 <p>24/06/2023: Fuck you, two updates in a day. Read our <a href="/fearandhunger.html">Fear and Hunger log</a>... now!! Oh, there's also new art on <a href="/illus2.html">Illustration 2</a>.</p>
                 <p>24/06/2023: We've been cooking up the <a href="/archive1.html">Archive 1</a> for the past few days, and it's finally done! Feel free to give it a look. Content warning: Homestuck.</p>
                 <p>20/06/2023: Check this shit out: The <a href="/illus1.html">Illustration 1</a> gallery has been created. Go check it out, will ya!</p>
