--- a/writing.html
+++ b/writing.html
@@ -18,6 +18,7 @@
             <a href="/writing.html">Writing</a>
             <a href="/misc.html">Misc.</a>
             <a href="/credits.html">Site credits</a>
+            <a href="https://yourdevilfriends.123guestbook.com/">Guestbook</a>
         </nav>
         <article>
             <h2><a href="/fearandhunger.html">Fear and Hunger log</a></h2>
