Single typo fix <3

--- a/fearandhunger.html
+++ b/fearandhunger.html
@@ -81,7 +81,7 @@
                     <li>Difficulty: Terror and Starvation</li>
                     <li>Additional thoughts: Wasting a bear trap on an easy enemy is a terrible idea</li>
                 </ul>
-                <p>The layout of the dungeon was the same as the last run, so we proceeded much in the same way. In the prison, fought and won against a ghoul, using a soul stone on it. Used a bear trap on Trotur in the basement, making the fight against him much easier, getting a key after searching his corpse. However, we lost both arm against a guard. We managed to escape, but decided to quit the run early afterwards.</p>
+                <p>The layout of the dungeon was the same as the last run, so we proceeded much in the same way. In the prison, fought and won against a ghoul, using a soul stone on it. Used a bear trap on Trotur in the basement, making the fight against him much easier, getting a key after searching his corpse. However, we lost both arms against a guard. We managed to escape, but decided to quit the run early afterwards.</p>
                 <!---->
                 <h3>Run #2</h3>
                 <ul>
