--- a/archive1.html
+++ b/archive1.html
@@ -209,7 +209,7 @@
         <!---->
         <a href="/images/art/archive1/2011-llama.png"><img src="/images/art/archive1/2011-llama.png"></a>
         <!---->
-        <a href="/images/art/archive1/2011-tekk.png"><img src="/images/art/archive1/2011-tekk.png"></a>
+        <a href="/images/art/archive1/2011-tekk.png"><img src="/images/art/archive1/2011-tekk.png" class="pixel"></a>
         <!---->
         <a href="/images/art/archive1/2011-green.png"><img src="/images/art/archive1/2011-green.png"></a>
         <!---->
