Typo fixes, marriage

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             <a href="/credits.html">Site credits</a>
             <a href="https://yourdevilfriends.123guestbook.com/">Guestbook</a>
         </nav>
-        <img src="/images/decor/cate.gif" class="rotate" style="margin-left: 10px; position: absolute;">
+        <img src="/images/decor/cate.gif" class="rotate pixel" style="margin-left: 10px; position: absolute;">
         <article id="about">
             <section id="self">
                 <p><span lang="pt">Olá!</span> This is devils speaking.</p>
@@ -37,8 +37,8 @@
                 </center>
             </section>
             <figure>
-                <img src="/images/decor/picrew.png" alt="Picrew avatar" id="picrew">
-                <figcaption>What we look like · <a href="https://picrew.me/ja/image_maker/1944831" target="_blank">Picrew credit</a></figcaption>
+                <img src="/images/decor/marriage.png" alt="Fictional marriage certificate" id="married">
+                <figcaption>Lord Kass is our husband lol.</figcaption>
             </figure>
             <img src="/images/decor/webmaster.gif" style="position: absolute; margin-top: -55px; margin-left: 230px;">
         </article>
@@ -46,15 +46,15 @@
             <section class="box">
                 <h3>TV & movie delights</h3>
                 <p>Cartoons: <em>Hazbin Hotel</em>, Helluva Boss, Turning Red</p>
-                <p>Anime: <em>Satoshi Kon works</em>, Studio Ghibli works, Mob Psycho 100, Akira, <em>Tekkonkinkreet</em></p>
-                <p>Live-action: Oldboy... we don't watch many live-action movies</p>
+                <p>Anime: <em>Satoshi Kon works</em>, Studio Ghibli works, Mob Psycho 100, Akira, <em>Tekkonkinkreet</em>, <em>Nekojiru</em></p>
+                <p>Live-action: Oldboy... we don't watch a lot of live-action media</p>
             </section>
             <section class="box">
                 <h3>Video game delights</h3>
-                <p>Indie games: <em>Hypnospace Outlaw</em>, <em>Slayers X</em>, Tattletail, Baba Is You, RPGMaker games, Postal 2</p>
+                <p>Indie games: <em>Hypnospace Outlaw</em>, <em>Slayers X</em>, Tattletail, <em>Fear and Hunger</em>, Yume Nikki, Postal 2</p>
                 <p>Triple-A: <em>Nintendo games</em>, The Elder Scrolls series, Sonic series, Yo-kai Watch series, <em>Persona 5</em></p>
             </section>
-            <img src="/images/decor/newslady.gif" class="rotate" style="position: absolute; margin-left: -325px; margin-top: 280px;">
+            <img src="/images/decor/newslady.gif" class="rotate pixel" style="position: absolute; margin-left: -325px; margin-top: 280px;">
             <section class="box">
                 <h3>Literature delights</h3>
                 <p>Comic/manga authors: <em>Junji Ito</em>, <em>Inio Asano</em>, <span lang="pt">Mariana Pita</span></p>
@@ -63,12 +63,12 @@
             </section>
             <section class="box">
                 <h3>Miscellaneous delights</h3>
-                <p><em>Art of all kinds</em>, entomology, collecting pins, <em>HTML/CSS</em> (duh), mental health, <em>Internet history and oddities</em>, philosophy, D&D, <em>Halley Labs</em>, <em>Everything Everything</em>...</p>
+                <p><em>Art of all kinds</em>, entomology, collecting pins, <em>HTML/CSS</em> (duh), mental health, <em>Neopets</em>, <em>Internet history and oddities</em>, philosophy, D&D, <em>Halley Labs</em>, <em>Everything Everything</em>...</p>
                 <p>... and probably a ton of other stuff too</p>
             </section>
             <a href="mailto:heckmaster@protonmail.com"><img src="/images/decor/email.gif" alt="Send us an e-mail" style="position: absolute; margin-top: -50px; margin-left: -40px;">
         </article>
-        <a href="https://ochame.neocities.org/bayanet/" target="_blank"><img src="https://ochame.neocities.org/assets/bayanet/v2/devils.png" alt="BayaNet ID" class="center"></a>
+        <a href="https://ochame.neocities.org/bayanet/" target="_blank"><img src="https://ochame.neocities.org/assets/bayanet/v2/devils.png" alt="BayaNet ID" class="center rotate"></a>
     </main>
 </body>
 </html>
