--- a/fearandhunger.html
+++ b/fearandhunger.html
@@ -81,7 +81,7 @@
                     <li>Difficulty: Terror and Starvation</li>
                     <li>Additional thoughts: Just run from the cavemother, dude</li>
                 </ul>
-                <p>The one where we explored the most. Lost an arm early on to a guard, but managed to defeat most enemies we encountered, free the girl (who quickly lost her life to a guard) and go to the backyard. Learned many spells and how to dash. Got to the caverns, where we couldn't add Moonless to the party and finally lost to a cavemother. It was a bit of a bummer to lose on a run that was going well, but since we found a lot of books we got some tasty lore.</p>
+                <p>The one where we explored the most. Lost an arm early on to a guard, but managed to defeat most enemies we encountered, free the girl (who quickly lost her life to a guard) and go to the backyard. Learned many spells and how to dash. Got to the caverns, where we couldn't add Moonless to the party and finally lost to the cavemother. It was a bit of a bummer to lose on a run that was going well, but since we found a lot of books we got some tasty lore.</p>
                 <!---->
                 <h3>Run #3</h3>
                 <ul>
