--- a/fearandhunger.html
+++ b/fearandhunger.html
@@ -54,6 +54,24 @@
                 </ul>
                 <p></p>
                 -->
+                <h3>Run #2</h3>
+                <ul>
+                    <li>Date: 27/06/2023</li>
+                    <li>Played as: Yellow mage</li>
+                    <li>Difficulty: Fear and Hunger mode</li>
+                    <li>Additional thoughts: Just avoid the vile</li>
+                </ul>
+                <p>We explored the woods quite thoroughly, losing an arm early to the woodsman but winning right afterwards. In Prehevil, defeated a villager and lost to the vile right afterwards.</p>
+                <!---->
+                <h3>Run #1.5</h3>
+                <ul>
+                    <li>Date: 27/06/2023</li>
+                    <li>Played as: Yellow mage</li>
+                    <li>Difficulty: Easie(r) mode</li>
+                    <li>Additional thoughts: Did we really die to text...?</li>
+                </ul>
+                <p>Died in the non-abridged introduction. Not counting this one as a proper run, but it <em>is</em> funny.</p>
+                <!---->
                 <h3>Run #1</h3>
                 <ul>
                     <li>Date: 25/06/2023</li>
