--- a/archive2.html
+++ b/archive2.html
@@ -15,7 +15,7 @@
 <body>
     <aside>
         <header>
-            <a href="/"><img src="/images/headers/tamagotchi.png" alt="Header image"></a>
+            <a href="/"><img src="/images/headers/furry.gif" alt="Header image"></a>
         </header>
         <nav>
             <a href="/about.html">About</a>
