--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <!--Updates-->
             <h3 class="center rainbow">Update log</h3>
             <footer id="updates">
+                <p>29/06/2023: New <a href="/fearandhunger.html">F&H log entries</a> and minor changes.</p>
                 <p>26/06/2023: Early morning update. <a href="/archive2.html">Archive 2 is finished</a>, updated gallery CSS and the <a href="/fearandhunger.html">Fear and Hunger log</a> as well. Some minor changes here and there, compressed lots of images... Might update later today as well.</p>
                 <p>25/06/2023: Minor changes and fixes all around the site, new <a href="/fearandhunger.html">F&H logs</a>, added the <a href="/misc.html">miscellaneous</a> and <a href="/freebies.html">free graphics</a> pages... We have a <a href="https://yourdevilfriends.123guestbook.com/">guestbook</a> now too!</p>
                 <p>24/06/2023: Fuck you, two updates in a day. Read our <a href="/fearandhunger.html">Fear and Hunger log</a>... now!! Oh, there's also new art on <a href="/illus2.html">Illustration 2</a>.</p>
