Pixel art! Scans!

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             <a href="/credits.html">Site credits</a>
             <a href="https://yourdevilfriends.123guestbook.com/">Guestbook</a>
         </nav>
-        <img src="/images/decor/cate.gif" class="rotate pixel" style="margin-left: 10px; position: absolute;">
+        <img src="/images/decor/cate.gif" class="rotate pixel" style="margin-left: 250px; position: absolute;">
         <article id="about">
             <section id="self">
                 <p><span lang="pt">Olá!</span> This is devils speaking.</p>
@@ -36,11 +36,10 @@
                     <a href="https://moonview.neocities.org/" target="_blank"><img src="/images/link-buttons/moonview.gif" alt="Moonview" title="Noa"></a>
                 </center>
             </section>
-            <figure>
-                <img src="/images/decor/marriage.png" alt="Fictional marriage certificate" id="married">
-                <figcaption>Lord Kass is our husband lol.</figcaption>
-            </figure>
-            <img src="/images/decor/webmaster.gif" style="position: absolute; margin-top: -55px; margin-left: 230px;">
+            <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=heckmaster" defer></script>
+            <img src="/images/decor/webmaster.gif" style="position: absolute; margin-top: -25px; margin-left: 10px;">
+            <a href="https://tamanotchi.world/4706c"><img src="https://tamanotchi.world/i2/4706" alt="It's tamaNOTchi! Click to feed!" class="center" style="margin-top: 50px; margin-bottom: 10px;"></a>
+            <p class="center">Spare a food for my child?</p>
         </article>
         <article id="prefer">
             <section class="box">
