--- a/noodles.html
+++ b/noodles.html
@@ -26,6 +26,7 @@
                 <!--Table of contents-->
                 <h3>Jump to a review:</h3>
                 <ul>
+                    <li><a href="#ajinomoto-miso">Oyakata Miso Ramen by Ajinomoto</a></li>
                     <li><a href="#knorr-chicken"><span lang="pt">Tentação de Galinha</span> by Knorr</a></li>
                     <li><a href="#kelly-katsuo">Katsuo Udon by Kelly Loves</a></li>
                     <li><a href="#knorr-cheese"><span lang="pt">Atração de Queijo</span> by Knorr</a></li>
@@ -37,6 +38,9 @@
                     <li><a href="#nissin-demae">Demae Ramen Miso by Nissin</a></li>
                     <li><a href="#pg-teriyaki">Beef Teriyaki Flavor by <span lang="pt">Pingo Doce</span></a></li>
                 </ul>
+                <!---->
+                <h3 id="ajinomoto-miso">Oyakata Miso Ramen by Ajinomoto: 3.5/5</h3>
+                <p>A very pleasant, mild flavor. However, it doesn't really taste like miso... namely because the amount of black pepper and ginger overshadows it. It's still tasty, with a very pleasant spicy kick to it, but we can't really get over it not tasting like miso.</p>
                 <!---->
                 <h3 id="knorr-chicken"><span lang="pt">Tentação de Galinha</span> by Knorr: 4.5/5</h3>
                 <p>With its name translating to «Chicken Temptation» (seriously, who names these fucking things?), Knorr certainly seems to have pride in its instant noodles...</p>
