--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <!--Updates-->
             <h3 class="center rainbow">Update log</h3>
             <footer id="updates">
+                <p>30/06/2023: The <a href="/pixel1.html">Pixel art 1 gallery</a> is here, along with <a href="/scans.html">scans</a> and a new <a href="/noodles.html">instant noodle review</a>. Some changes in the <a href="/about.html">about page</a> too.</p>
                 <p>29/06/2023: New <a href="/fearandhunger.html">F&H log entries</a> and minor changes.</p>
                 <p>26/06/2023: Early morning update. <a href="/archive2.html">Archive 2 is finished</a>, updated gallery CSS and the <a href="/fearandhunger.html">Fear and Hunger log</a> as well. Some minor changes here and there, compressed lots of images... Might update later today as well.</p>
                 <p>25/06/2023: Minor changes and fixes all around the site, new <a href="/fearandhunger.html">F&H logs</a>, added the <a href="/misc.html">miscellaneous</a> and <a href="/freebies.html">free graphics</a> pages... We have a <a href="https://yourdevilfriends.123guestbook.com/">guestbook</a> now too!</p>
