--- a/credits.html
+++ b/credits.html
@@ -27,7 +27,7 @@
             <p><a href="http://www.travelmin.com/" target="_blank">travelmin</a> (<a href="/images/decor/neko.gif">1</a>)</p>
             <p><a href="https://hpgpixer.jp/" target="_blank">PixelGaro</a> (<a href="/images/decor/webmaster.gif">1</a>) (<a href="/images/link-buttons/rss.gif">2</a>)</p>
             <p><a href="http://diabellalovescats.com/graphics.htm" target="_blank">Diabella's Vintage Cat Graphics</a> (<a href="/images/headers/magical.gif">1</a>) (<a href="/images/headers/soul.jpg">2</a>)</p>
-            <p><a href="https://www.lovetiny.art" target="_blank">LoveTiny</a> (<a href="/images/headers/farm.png"></a>)</p>
+            <p><a href="https://www.lovetiny.art" target="_blank">LoveTiny</a> (<a href="/images/headers/farm.png">1</a>)</p>
             <p>Every other asset is official art, made/edited by us, or from an unknown source.</p>
             <h2>Code snippets</h2>
             <p><a href="https://solaria.neocities.org/" target="_blank">Solaria's Webspace</a> (rainbow text code)</p>
